[client] Prevent back button from getting squished

--- a/client/src/components/ButtonBack/ButtonBack.scss
+++ b/client/src/components/ButtonBack/ButtonBack.scss
@@ -5,6 +5,8 @@
   margin-right: .5rem;
   height: 2.5rem;
   width: 2.5rem;
+  min-height: 2.5rem;
+  min-width: 2.5rem;
   border-radius: 1.5rem;
   border: none;
   background-color: $color_yellow_primary;
@@ -20,6 +22,8 @@
     margin-right: 1rem;
     height: 3rem;
     width: 3rem;
+    min-height: 3rem;
+    min-width: 3rem;
   }
 
   &__arrow {
